--- a/config.toml
+++ b/config.toml
@@ -42,5 +42,30 @@
 
   [projects.pt]
   contents = [
-    "preface_pt"
+    "preface_pt",
+    "why_julia",
+    "julia_basics",
+    "dataframes",
+    "dataframes_load_save",
+    "dataframes_indexing",
+    "dataframes_select",
+    "dataframes_join",
+    "dataframes_transform",
+    "dataframes_groupby_combine",
+    "dataframes_performance",
+    "data_vis_makie",
+    "data_vis_makie_cairo",
+    "data_vis_makie_attributes",
+    "data_vis_makie_themes",
+    "data_vis_makie_latex",
+    "data_vis_makie_colors",
+    "data_vis_makie_layouts",
+    "data_vis_makie_glmakie",
+    #"stats",
+    #"stats_distributions",
+    #"stats_vis",
+    "appendix",
+    "notation",
+    #"project_management",
+    "references"
   ]
