--- a/config.toml
+++ b/config.toml
@@ -45,14 +45,14 @@
     "preface_pt",
     "why_julia",
     "julia_basics",
-    "dataframes",
-    "dataframes_load_save",
-    "dataframes_indexing",
-    "dataframes_select",
-    "dataframes_join",
-    "dataframes_transform",
-    "dataframes_groupby_combine",
-    "dataframes_performance",
+    "dataframes_pt",
+    "dataframes_load_save_pt",
+    "dataframes_indexing_pt",
+    "dataframes_select_pt",
+    "dataframes_join_pt",
+    "dataframes_transform_pt",
+    "dataframes_groupby_combine_pt",
+    "dataframes_performance_pt",
     "data_vis_makie",
     "data_vis_makie_cairo",
     "data_vis_makie_attributes",
