[PT] julia_basics.md (#3)
* added pt markdown files for julia_basics chapter

* updated config.toml

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

* Update julia_basics_pt.md

Co-authored-by: NMLebedev <90654154+NMLebedev@users.noreply.github.com>

--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@
   contents = [
     "preface_pt",
     "why_julia_pt",
-    "julia_basics",
+    "julia_basics_pt",
     "dataframes",
     "dataframes_load_save",
     "dataframes_indexing",
