--- a/config.toml
+++ b/config.toml
@@ -64,8 +64,8 @@
     #"stats",
     #"stats_distributions",
     #"stats_vis",
-    "appendix",
-    "notation",
+    "appendix_pt",
+    "notation_pt",
     #"project_management",
-    "references"
+    "references_pt"
   ]
