[PT] data_vis_makie_pt (#9)
* added pt markdown files for data_vis_makie chapter

* updated config.toml

* Update data_vis_makie_pt.md

* Update data_vis_makie_cairo_pt.md

* Update data_vis_makie_attributes_pt.md

* normalized back-end to backend and italized english words

* Revisão cairomakie

* correção do atributes

* Revisão Técnica - Henrique Pougy

19. GPU powered - o sentido aqui é que a GPU que suporta a renderização dos grá>
33. Sugestão. Plots = gráficos

* Revisão Técnica - Henrique Pougy

3. Scatter plot = gráfico de dispersão.
3. Observações conectadas por linhas.
22. Plot = gráfico. Sugestão de redação.
24. Sugestão de redação, para ficar claro que são 3 objetos dentro de uma collection.
26. Plot italicizado, pois se refere ao nome do objeto. Sugestão de redação com tradução dos nomes dos outros objetos.
29. Sugestão de redação.

* Revisão Técnica Henrique Pougy

3. Plot = gráfico. Sugestão: traduzir attributes.
16. Dict calling = chamada de dicionário.
18. Sugestão de redação.
28. Plot objects = objetos de tipo plot, italicizado. Sugestão de redação.
29. Traduzindo nomes dos atributos.
30. Sugestão de redação.
32. Sugestão de redação. Traduzindo nomes dos atritubos.
35. Sugestão de redação
55. Traduzindo nome do atributo. Sugestão de redação.
56. Sugestão de redação.
57. Sugestão de redação, tradução do método append.
59. Sugestão de redação, para deixar mais claro que o que está mudando é a posição da legenda.

---- Tradução ainda não finalizada, parei na linha 59.

* Update data_vis_makie_attributes_pt.md

* Update data_vis_makie_attributes_pt.md

* Update data_vis_makie_themes_pt.md

* Update data_vis_makie_latex_pt.md

* Update data_vis_makie_colors_pt.md

* Update data_vis_makie_layouts_pt.md

* Update data_vis_makie_layouts_pt.md

* Update data_vis_makie_layouts_pt.md

* Update data_vis_makie_layouts_pt.md

* Update data_vis_makie_layouts_pt.md

* Update data_vis_makie_layouts_

--- a/config.toml
+++ b/config.toml
@@ -53,14 +53,14 @@
     "dataframes_transform_pt",
     "dataframes_groupby_combine_pt",
     "dataframes_performance_pt",
-    "data_vis_makie",
-    "data_vis_makie_cairo",
-    "data_vis_makie_attributes",
-    "data_vis_makie_themes",
-    "data_vis_makie_latex",
-    "data_vis_makie_colors",
-    "data_vis_makie_layouts",
-    "data_vis_makie_glmakie",
+    "data_vis_makie_pt",
+    "data_vis_makie_cairo_pt",
+    "data_vis_makie_attributes_pt",
+    "data_vis_makie_themes_pt",
+    "data_vis_makie_latex_pt",
+    "data_vis_makie_colors_pt",
+    "data_vis_makie_layouts_pt",
+    "data_vis_makie_glmakie_pt",
     #"stats",
     #"stats_distributions",
     #"stats_vis",
