--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -17,6 +17,21 @@ jobs:
           persist-credentials: false
           ref: gh-pages
 
-      - name: Deploy to JuliaDataScience
+      - shell: julia --color=yes {0}
+        run: |
+          jds_dir = mktempdir()
+          url = "https://github.com/JuliaDataScience/JuliaDataScience"
+          run(`git clone --branch=gh-pages $url $jds_dir`)
+          from = "."
+          to = joinpath(jds_dir, "pt")
+          mkpath(to)
+          cp(from, to; force=true)
+          cd(jds_dir) do
+              run(`git add .`)
+              run(`git commit -m 'deploy from JuliaDataScience-PT'`)
+              run(`git push`)
+          end
+
+    name: Deploy to JuliaDataScience
         run: julia src/push-jds.jl
 
