--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -31,7 +31,7 @@ jobs:
           cd(jds_dir) do
               run(`git add .`)
               run(`git config --global user.email 'contact@juliadatascience.io'`)
-              run(`git config --glabal user.name 'Bot'`)
+              run(`git config --global user.name 'Bot'`)
               run(`git commit -m 'deploy from JuliaDataScience-PT'`)
               run(`git push`)
           end
