--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -17,12 +17,19 @@ jobs:
           persist-credentials: true
           ref: gh-pages
 
+      -   name: Setup SSH Keys and known_hosts
+          env:
+            SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+          run: |
+            ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+            ssh-add - <<< "${{ secrets.JULIADATASCIENCE }}"
+
       - name: Deploy to JuliaDataScience
         shell: julia --color=yes {0}
         run: |
           jds_dir = mktempdir()
           secret = ENV["JULIADATASCIENCE"]
-          url = "https://jds:$secret@github.com/JuliaDataScience/JuliaDataScience"
+          url = "https://github.com/JuliaDataScience/JuliaDataScience"
           run(`git clone --branch=gh-pages $url $jds_dir`)
           from = "."
           to = joinpath(jds_dir, "pt")
@@ -35,6 +42,4 @@ jobs:
               run(`git commit -m 'deploy from JuliaDataScience-PT'`)
               run(`git push`)
           end
-        env:
-          JULIADATASCIENCE: ${{ secrets.JULIADATASCIENCE }}
 
