--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -25,7 +25,7 @@ jobs:
         shell: julia --color=yes {0}
         run: |
           jds_dir = mktempdir()
-          url = "https://github.com/JuliaDataScience/JuliaDataScience"
+          url = "git@github.com:JuliaDataScience/JuliaDataScience.git"
           run(`git clone --branch=gh-pages $url $jds_dir`)
           from = "."
           to = joinpath(jds_dir, "pt")
