--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: julia-actions/setup-julia@v1
         with:
-          version: "1.6"
+          version: "1.7"
 
       - uses: actions/cache@v1
         env:
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install dependencies
         run: julia --color=yes --project -e 'using Pkg; Pkg.instantiate();
-                using Books; Books.install_dependencies()'
+          using Books; Books.install_dependencies()'
 
       - run: >
           DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --project -e '
@@ -44,4 +44,10 @@ jobs:
           # Fix for Plots with GR backend.
           GKSwstype: nul
 
-
+      - name: Deploy to secondary branch
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force_orphan: true
+          publish_dir: ./_build/
