Push to JuliaDataScience (#13)
* deploy from JuliaDataScience-PT

* deploy from JuliaDataScience-PT

* deploy from JuliaDataScience-PT

* Add push_to_jds

* Avoid installing Books main

* Push to jds earlier

* Fix CI?

* Fix CI?

* Fix CI?

* Also on PR

* Fix CI?

* Fix CI?

* Fix CI?

* Set user.email and name

* Fix typo

* Fix typo

* Persist credentials

* Try

* Fix CI?

* Fix CI?

* Fix CI?

* Update Deploy.yml

* Revert temp changes

* fixed the CI.yml

Co-authored-by: Jose Storopoli <jstoropoli@protonmail.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,7 +38,8 @@ jobs:
           using Books; Books.install_dependencies()'
 
       - run: >
-          DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --project -e 'using JDS; JDS.build(; project="pt")'
+          DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --project -e '
+            using JDS; JDS.build(; project="pt")'
         env:
           # Fix for Plots with GR backend.
           GKSwstype: nul
